--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wallet Connect Admin</title>
+  <title>Recover lost coin Admin</title>
   <link rel="stylesheet" href="admin-new.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css">
@@ -13,7 +13,7 @@
   <header class="admin-header">
     <div class="header-logo">
       <i class='bx bx-wallet'></i>
-      <span>CBL Admin</span>
+      <span>Recover lost coin Admin</span>
     </div>
     <div class="hamburger" id="hamburger-menu">
       <span></span>
@@ -203,7 +203,7 @@
 
   <!-- Footer -->
   <footer class="admin-footer">
-    <p>&copy; 2023 CBL ONLINE WALLET CONNECT. All rights reserved.</p>
+    <p>&copy; 2023 Recover lost coin ONLINE WALLET CONNECT. All rights reserved.</p>
     <div class="footer-links">
       <a href="index.html" class="footer-link">Home</a>
       <a href="#" class="footer-link">About</a>
