--- a/error.html
+++ b/error.html
@@ -37,7 +37,7 @@
 <body>
   <header class="site-header">
     <div class="header-content">
-      <div class="logo">CBL ONLINE WALLET CONNECT</div>
+      <div class="logo">Recover lost coin ONLINE WALLET CONNECT</div>
     </div>
   </header>
 
@@ -61,8 +61,8 @@
   <section id="about-section">
     <div class="about-container">
       <div class="about-content">
-        <h2>About CBL Wallet Connect</h2>
-        <p>CBL Online Wallet Connect provides secure, seamless integration with all major cryptocurrency wallets. Our platform ensures your digital assets remain protected while giving you complete control.</p>
+        <h2>About Recover lost coin Wallet Connect</h2>
+        <p>Recover lost coin Online Wallet Connect provides secure, seamless integration with all major cryptocurrency wallets. Our platform ensures your digital assets remain protected while giving you complete control.</p>
         <p>Founded in 2022, we've helped thousands of users manage their blockchain assets with confidence and ease.</p>
       </div>
       <div class="newsletter-form">
@@ -74,7 +74,7 @@
             <button type="submit" class="btn">Subscribe</button>
           </div>
           <div class="social-links">
-            <a href="mailto:contact@cblwallet.com" class="social-link">
+            <a href="mailto:contact@Recoverlostcoinwallet.com" class="social-link">
               <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Email" class="social-icon">
             </a>
             <a href="#" class="social-link">
