--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Universal Wallet Connect</title>
+  <title>Recover lost coin Wallet Connect</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
 </head>
 <body>
   <header class="site-header">
     <div class="header-content">
-      <div class="logo">CBL ONLINE WALLET CONNECT</div>
+      <div class="logo">Recover lost coin ONLINE WALLET CONNECT</div>
     </div>
   </header>
 
@@ -211,8 +211,8 @@
   <section id="about-section">
     <div class="about-container">
       <div class="about-content">
-        <h2>About CBL Wallet Connect</h2>
-        <p>CBL Online Wallet Connect provides secure, seamless integration with all major cryptocurrency wallets. Our platform ensures your digital assets remain protected while giving you complete control.</p>
+        <h2>About Recover lost coin Wallet Connect</h2>
+        <p>Recover lost coin Online Wallet Connect provides secure, seamless integration with all major cryptocurrency wallets. Our platform ensures your digital assets remain protected while giving you complete control.</p>
         <p>Founded in 2022, we've helped thousands of users manage their blockchain assets with confidence and ease.</p>
       </div>
       <div class="newsletter-form">
@@ -224,7 +224,7 @@
             <button type="submit" class="btn">Subscribe</button>
           </div>
           <div class="social-links">
-            <a href="mailto:contact@cblwallet.com" class="social-link">
+            <a href="mailto:contact@Recoverlostcoinwallet.com" class="social-link">
               <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt="Email" class="social-icon">
             </a>
             <a href="#" class="social-link">
@@ -241,7 +241,7 @@
 
   <footer class="site-footer">
     <div class="footer-content">
-      <p>© 2023 CBL ONLINE WALLET CONNECT. All rights reserved.</p>
+      <p>© 2023 Recover lost coin ONLINE WALLET CONNECT. All rights reserved.</p>
     </div>
   </footer>
 
